--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html,body{
     width: 100%;
 }
 #main{
+    background-color: #033ad0;
     position: relative;
     overflow: hidden;
 }
@@ -99,6 +100,7 @@ html,body{
     position: relative;
     padding: 0  8vw;
     color: #f0fff0
+
 }
 #page2 h2{
     color: rgba(240, 255, 240, 0.663);
@@ -112,8 +114,23 @@ html,body{
     line-height: 1.2;
     font-size: 4vw;
     color: #f0fff02e;
+    letter-spacing: -3px;
 }
+#page3{
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    /* background-color: #033ad0; */
+    /* overflow: hidden; */
 
+}
+#page3 canvas{
+    max-height: 100vh;
+    max-width: 100vw;
+    position: relative;
+
+
+}
 
 
 
